Refactor integration-test-java